# smartlabs

./: CHANGELOG.md  ESTADO.md  PENDIENTES.md  README.md
www/: .env  .env.example  .gitignore  .htaccess  ARCHITECTURE.md  BUSQUEDA_TIEMPO_REAL.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DOCKER_README.md  DOCUMENTACION_SMARTLABS.md  ESTADO_DISPOSITIVO_README.md  ESTRUCTURA_FINAL_PHP.md  IMPLEMENTACION_BECARIOS.md  INSTRUCCIONES_MIGRACION.md  MEJORAS_STATS_BUSCADOR.md  MIGRACION_MVC.md  MQTT_CONFIGURATION_FIX.md  PROBAR_AHORA.md  SESION_PERMANENTE.md  SISTEMA_ESTADO_DISPOSITIVOS.md  SISTEMA_MVC_COMPLETO.md  SISTEMA_PILA_USUARIOS.md  SOLUCION_BUSQUEDA_AUTOMATICA.md  URLS_DE_PRUEBA.md  (+23 more)
www-v3/: .env.example  .gitignore  README.md  docker-compose.yml  rostros.txt
www-v3/backend/: Dockerfile  pyproject.toml
www-v3/backend/alembic/: env.py
www-v3/backend/alembic/versions/: 0001_initial.py  0002_face_embeddings.py  0003_face_enabled.py
www-v3/backend/app/: db.py  main.py  security.py  settings.py
www-v3/backend/app/models/: __init__.py  area.py  campus.py  face.py  inventory.py  loan.py  session.py  station.py  tool.py  user.py
www-v3/backend/app/mqtt/: client.py  handlers.py  publisher.py
www-v3/backend/app/routers/: areas.py  auth.py  face.py  health.py  inventory.py  loans.py  stations.py  tools.py  users.py
www-v3/backend/app/schemas/: area.py  common.py  face.py  inventory.py  loan.py  station.py  tool.py  user.py
www-v3/backend/app/scripts/: seed_admin.py
www-v3/backend/app/services/: face_session.py
www-v3/backend/app/ws/: admin.py  broker.py  station.py
(+240 files in other folders)
